# qt-qml-timer-navigation

./: CMakeLists.txt  Main.qml  MenuScreen.qml  README.md  Screen1.qml  TimerBackend.cpp  TimerBackend.h  main.cpp
